[workspace]
members = [".", "derive"]

[package]
name = "type_checker"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
type_checker_derive = { optional = true, path = "derive" }
regex_helper = { package = "regex", version = "1.5.4" }

[features]
derive = ["type_checker_derive"]