[workspace]
members = [".", "derive"]

[package]
name = "type-rules"
version = "0.2.2"
readme = "README.md"
edition = "2021"
description = "A crate to easily constrain a struct"
homepage = "https://github.com/TheoOiry/type-rules"
repository = "https://github.com/TheoOiry/type-rules"
documentation = "https://docs.rs/type-rules"
keywords = ["rule", "type", "contraint", "restrict", "validate"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
authors = ["Théo Oiry <theo.oiry@yahoo.fr>"]

[package.metadata.docs.rs]
features = ["regex"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
type-rules-derive = { optional = true, path = "derive", version = "0.2.2" }
regex_helper = { optional = true, package = "regex", version = "1.5.4" }

[dev-dependencies]
claim = "0.5.0"
chrono = "0.4.19"

[features]
derive = ["type-rules-derive"]
regex = ["regex_helper"]

[[example]]
name = "derive"
path = "examples/derive.rs"
required-features = [
    "derive",
    "regex"
]