[package]
name = "type-rules-derive"
version = "0.2.2"
edition = "2021"
readme = "../README.md"
description = "type-rules derive macro"
homepage = "https://github.com/TheoOiry/type-rules"
repository = "https://github.com/TheoOiry/type-rules"
documentation = "https://docs.rs/type-rules"
keywords = ["rule", "type", "contraint", "restrict", "validate"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
authors = ["Théo Oiry <theo.oiry@yahoo.fr>"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["parsing", "extra-traits", "full"] }
quote = "1.0"

[lib]
proc-macro = true


