[package]
name = "type_checker_derive"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version="1.0", features=["parsing", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true


